--- a/red/templates/red/login.html
+++ b/red/templates/red/login.html
@@ -57,6 +57,7 @@
         <h2>This text should appear at the bottom</h2>
     </section>
     <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js'></script>
+    <script src="{% static 'red/script/lib.js' %}?checksum=ba411cafee2f0f702522369da0b765e2"></script>
     <script src="{% static 'red/script/login.js' %}"></script>
 </body>
 
