--- a/red/templates/red/post_editor.html
+++ b/red/templates/red/post_editor.html
@@ -10,6 +10,7 @@
 </head>
 
 <body>
+    {% include "red/includes/account.html" %}
     <form action="{% url 'create_post' sub %}" method="post">
         {% csrf_token %}
         <fieldset>
@@ -37,4 +38,9 @@
             <input type="submit" value="Post">
         </fieldset>
     </form>
+
+    {% load static %}
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script src="{% static 'red/script/lib.js' %}?checksum=ba411cafee2f0f702522369da0b765e2"></script>
+    <script src="{% static 'red/script/account.js' %}?checksum=ba411cafee2f0f702522369da0b765e2"></script>
 </body>
