--- a/red/templates/red/sub.html
+++ b/red/templates/red/sub.html
@@ -10,6 +10,7 @@
 </head>
 
 <body>
+    {% include "red/includes/account.html" %}
     {% comment %} <h1>{{ sort type }} : in {{sub.name}}</h1> {% endcomment %}
     <h1>Latest posts in s/{{sub.name}}</h1>
     
@@ -33,7 +34,11 @@
     {% else %}
     <p>No posts are available.</p>
     {% endif %}
-    <!-- <script src="index.js"></script> -->
+
+    {% load static %}
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script src="{% static 'red/script/lib.js' %}?checksum=ba411cafee2f0f702522369da0b765e2"></script>
+    <script src="{% static 'red/script/account.js' %}?checksum=ba411cafee2f0f702522369da0b765e2"></script>
 </body>
 
 </html>
