--- a/red/templates/red/post.html
+++ b/red/templates/red/post.html
@@ -43,9 +43,11 @@
 
     <button type="button" class="post-vote up" {% if post.deleted %}disabled{%endif%}>Vote Up</button>
     <button type="button" class="post-vote down" {% if post.deleted %}disabled{%endif%}>Vote Down</button>
+    {% if user == comment.comment.author %}
     <button type="button" id="update-post" {% if post.deleted %}disabled{%endif%}>Edit</button>
     <button type="button" id="cancel-post" {% if post.deleted %}disabled{%endif%} style="display:none;">Cancel</button> {% comment %} for cancelling editing {% endcomment %}
     <button type="button" id="delete-post" {% if post.deleted %}disabled{%endif%}>Delete</button>
+    {% endif %}
 
     <h2>Comments</h2>
 
@@ -82,15 +84,18 @@
             u/[deleted]
             {% else %}
             <a href='{% url "user" comment.comment.author.username %}'>{{ comment.comment.author }}</a>
-            {% endif %}
             {% if comment.comment.author == post.author %} <span style="font-weight: bold">OP</span> {% endif %}
+            {% endif %}
+            
 
             <button type="button" class="comment-vote up" {% if comment.comment.deleted %}disabled{%endif%}>Vote Up</button>
             <button type="button" class="comment-vote down" {% if comment.comment.deleted %}disabled{%endif%}>Vote Down</button>
+            {% if user == comment.comment.author %}
             <button type="button" class="comment-update" id="update-{{comment.comment.id}}" {% if comment.comment.deleted %}disabled{%endif%}>Edit</button>
             <button type="button" class="comment-cancel" id="cancel-{{comment.comment.id}}" {% if comment.comment.deleted %}disabled{%endif%} style="display:none;">Cancel</button> {% comment %} for cancelling editing {% endcomment %}
             <button type="button" class="comment-delete" {% if comment.comment.deleted %}disabled{%endif%}>Delete</button>
-            
+            {% endif %}
+
             <p id="content-{{comment.comment.id}}" style="display:block;">
                 {% if comment.comment.deleted %}
                 [deleted]
